--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dumbo AI - AI-Powered Stock Recommendations</title>
+    <title>Dumbo AI</title>
     <meta name="description" content="Get intelligent stock recommendations powered by DeepSeek AI with real-time market data and portfolio tracking." />
   </head>
   <body>
